--- a/package.json
+++ b/package.json
@@ -11,14 +11,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.4",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.4",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@coreui/coreui": "^3.4.0",
+    "@coreui/icons": "^1.0.1",
+    "font-awesome": "^4.7.0",
+    "material-icons": "^0.5.1",
+    "moment": "^2.29.1",
+    "ng2-currency-mask": "^13.0.3",
+    "ngx-mask": "^12.0.0",
+    "parse-money": "^1.0.12",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "~7.8.0",
+    "simple-line-icons": "^2.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
